--- a/appendix.html
+++ b/appendix.html
@@ -6,29 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Our Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 
 <body>
+
     <div class="main-section">
         <div class="headers">
-            <img id="background1" src="background.png" alt="background" width="1250" height="600">
-            <h1 class="biggest-title" id="#id-name"> TINY BUT MIGHTY</h1>
-            <p class="descrip"> find and support local and small resturants in the college station/bryan area</p>
-            <button2 onclick = "window.location.href = 'what_the_buzz.html';">start dining</button2>
-            <button1 onclick = "window.location.href = 'appendix.html';">view all</button1>
+            <h1 class="biggest-title" id="#id-name">appendix <br></h1>
+            <p>click on a booth to visit that business's page </p>
             <button3 onclick = "window.location.href = 'index.html';">dine local</button3>
             <button4 onclick = "window.location.href = 'new_business.html';">add your business</button4>
+            
         </div>
     </div>
-
+    
 </body>
 
 <footer>
     2023 HOWDYHACK CREATED BY AMBER H. - EARLENE S. - EMILY C. 
 </footer>
-
-<div class="header"></div>
 
 </html>
 
